05-resilliency/all-together.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-test
spec:
  hosts: # incoming hosts which this should be applied to this service
  - nginx-test.training.svc.cluster.local
  http:
  - route:
    - destination:
        host: nginx-test.training.svc.cluster.local
        subset: v1 
    - destination:
      host: nginx-test.training.svc.cluster.local
      subset: v2
    retries:
        attempts: 3
        perTryTimeout: 2s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: nginx-test
spec:
  host: nginx-test.training.svc.cluster.local
  subsets: ## Pod labels. We group them here
  - labels:
      version: v1
    trafficPolicy:
      connectionPool:
        http: {}
        tcp: {}
      outlierDetection:
        baseEjectionTime: 15.000s
        consecutiveErrors: 1
        interval: 5.000s
        maxEjectionPercent: 100
    name: v1
  - labels:
      version: v2
    name: v2
    trafficPolicy:
      connectionPool:
        http: {}
        tcp: {}
      outlierDetection:
        baseEjectionTime: 15.000s
        consecutiveErrors: 1
        interval: 5.000s
        maxEjectionPercent: 100
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
