05-resilliency/loadbalancing-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: nginx-test
spec:
  host: nginx-test.training.svc.cluster.local
  subsets: ## Pod labels. We group them here
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
